2002-08-09  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/AE/cacheKey/cachekey.c: removed circularity checking
	which caused core dumps under load.

	* util/make_pydo_distr.py: added

2002-08-08  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/sqliteconn.py (PyDOSqlite.execute): added some
	debugging. Until the next version of pysqlite is released, this
	won't work, as the current version returns the wrong value for
	rowcount.  PySQLite in CVS at least exposes the necessary portion
	of the C API for me to find the correct value for rowcount after
	an INSERT/UPDATE, but I have only tested with 2.0, the last
	release. 
2002-08-07  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/sqliteconn.py,  pylibs/PyDO/PyDBI.py: added sqlite
	driver (still incomplete -- checked in largely as a way of
	getting it from one machine to another).

2002-08-01  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: more doc updates, readded the AE appendix

	* pylibs/AE/Executables.py (PythonExecutable.mergeNamespaces):
	doesn't set __name__ to '__main__' in data components

2002-07-31  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex: new chapter: Templating Languages, started
	filling out stuff in API services chapter

	* pylibs/AE/Executables.py (PythonExecutable.mergeNamespaces): now
	sets __name__ to '__main__' in the python namespace so, specifically,
	Cheetah Templates will now work.

2002-07-29  Andrew Csillag  <drew@localhost.localdomain>

	* docs/devel/devel.tex (section{Linkage Services}): added note
	about psptemplate

	* SkunkWeb/sw.conf.in: added bits for psptemplate

	* pylibs/psp.py (psp_compile): fixed error handling so line
	numbers in tracebacks should be closer to right.  Also made
	handling of syntax errors easier to read.

2002-07-29  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/pycgi.py (_processRequest): added slash at
	beginning of PATH_INFO, if it exists; SCRIPT_FILENAME is the full